<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:orientation="vertical">

	<include layout="@layout/module_description"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnCardPower"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_card_power" />

		<Button
			android:id="@+id/btnCardHalt"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_card_halt" />
	</LinearLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<Button
			android:id="@+id/btnExchangeApdu"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_exchangeApdu" />

		<Button
			android:id="@+id/btnExist"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/button_card_exist" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="left"
			android:text="@string/text_device_type"/>
		<cn.eas.national.deviceapisample.view.FlowRadioGroup
			android:id="@+id/rgDeviceType"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<RadioButton
				android:id="@+id/rbInner"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_device_type_inner"
				android:checked="true"/>
			<RadioButton
				android:id="@+id/rbExternal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/text_device_type_external"/>
		</cn.eas.national.deviceapisample.view.FlowRadioGroup>
	</LinearLayout>
	<include layout="@layout/message"/>

</LinearLayout>
