<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/module_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnInit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_init" />
        <Button
            android:id="@+id/btnOpen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_open" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_read_data" />
        <Button
            android:id="@+id/btnWrite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_write_data" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_close" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/text_baund_rate"/>
        <cn.eas.national.deviceapisample.view.FlowRadioGroup
            android:id="@+id/rgBaudRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbBaudRate9600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9600"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/rbBaudRate19200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19200"/>
            <RadioButton
                android:id="@+id/rbBaudRate38400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="38400" />
            <RadioButton
                android:id="@+id/rbBaudRate57600"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="57600" />
            <RadioButton
                android:id="@+id/rbBaudRate115200"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="115200" />
        </cn.eas.national.deviceapisample.view.FlowRadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/text_data_bit"/>
        <RadioGroup
            android:id="@+id/rgVoltage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbDataBit7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_data_bit_7"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbDataBit8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_data_bit_8" />
        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/text_parity"/>
        <RadioGroup
            android:id="@+id/rgParity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rbParityNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_parity_none"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbParityEven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_parity_even" />

            <RadioButton
                android:id="@+id/rbParityOdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_parity_odd" />
        </RadioGroup>
        <include layout="@layout/message"/>
    </LinearLayout>

</LinearLayout>
